fixed row gap issues

--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 *{
     box-sizing: border-box;
+    margin:0;
+    padding:0;
 }
 li{
     list-style-type: none;
+    padding:0;
+    margin:0;
+}
+html, body{
     padding:0;
     margin:0;
 }
@@ -10,9 +16,13 @@ li{
 /* outer-most grid layout */
 .container{
     display:grid;
-    grid-template-columns:minmax(100px,1fr) minmax(400px,4fr);
+    grid-template-columns:1fr 6fr;
+    padding:0;
+    margin:0;
 }
 .dashboard{
+    padding:0;
+    margin:0;
     grid-row:1/3;
     display:flex;
     flex-direction: column;
@@ -29,25 +39,32 @@ li{
     display:flex;
     padding:20px;
     gap:20px;
-    background-color: #d1d5db;
+    background-color: #e4e4e7;
 }
 .projects{
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
-    row-gap: 20px;
+    /* grid-template-rows: 150px 150px 150px;  next line is better*/
+    grid-auto-rows:min-content;
+    row-gap:20px;
     column-gap: 20px;
 }
 .project{
+    /* height: 150px; */
+    padding:10px;
     background-color: white;
-    border-left: 5px solid #fde047;
+    border-left: 5px solid #fb923c;
 }
 .announcement{
     background-color: white;
+    border-bottom: 2px solid black;
 }
 .trending{
     background-color: white;
 }
 .wrapper{
+    flex-basis:100px;
+    flex-grow:0;
     display:flex;
     flex-direction: column;
     gap:25px;
